objects/LLC_BI__Loan__c.object
<CustomObject>
    <fields>
        <fullName>JHJX__CallReportCode__c</fullName>
        <description>This field is used in the jXchange integration.</description>
        <label>Call Report Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>10A</fullName>
                    <label>10A-LEASE FIN REC-INDIV HOUSEHOLD, FAMILY &amp; OTHER PERS EXPENDIT</label>
                </value>
                <value>
                    <fullName>10B</fullName>
                    <label>10B-LEASE FINANCING RECEIVABLES-ALL OTHER</label>
                </value>
                <value>
                    <fullName>1A1</fullName>
                    <label>1A1-1-4 FAMILY RESIDENTIAL CONSTRUCTION LOAN</label>
                </value>
                <value>
                    <fullName>1A2</fullName>
                    <label>1A2 -OTHER CONSTRUCTION, LAND DEVELOPMENT, AND OTHER LAND LOANS</label>
                </value>
                <value>
                    <fullName>1B</fullName>
                    <label>1B-SECURED BY FARMLAND</label>
                </value>
                <value>
                    <fullName>1C1</fullName>
                    <label>1C1-REV, OPEN-END LNS SECURED BY 1-4 FAMILY RES, HELOCS</label>
                </value>
                <value>
                    <fullName>1C2A</fullName>
                    <label>1C2A-CLOSED-END 1-4 FAMILY RESIDENTIAL-SECURED BY 1ST LIENS</label>
                </value>
                <value>
                    <fullName>1C2B</fullName>
                    <label>1C2B-CLOSED-END 1-4 FAMILY RESIDENTIAL SECURED BY JUNIOR LIENS</label>
                </value>
                <value>
                    <fullName>1D</fullName>
                    <label>1D-SECURED BY MULTI-FAMILY</label>
                </value>
                <value>
                    <fullName>1E1</fullName>
                    <label>1E1-SECURED BY NON-FARM, NON-RESIDENTIAL, OWNER-OCCUPIED</label>
                </value>
                <value>
                    <fullName>1E2</fullName>
                    <label>1E2-SECURED BY NON-FARM, NON-RESIDENTIAL, NONOWNER-OCCUPIED</label>
                </value>
                <value>
                    <fullName>2A1</fullName>
                    <label>2A1-LOANS TO US BRANCHES &amp; AGENCIES OF FOREIGN BANKS</label>
                </value>
                <value>
                    <fullName>2A2</fullName>
                    <label>2A2-LOANS TO OTHER COMMERCIAL BANKS IN THE US</label>
                </value>
                <value>
                    <fullName>2B</fullName>
                    <label>2B-LOANS TO OTHER DEPOSITORY INSTITUTIONS IN THE US</label>
                </value>
                <value>
                    <fullName>2C1</fullName>
                    <label>2C1-LOANS TO FOREIGN BRANCHES OF OTHER US BANKS</label>
                </value>
                <value>
                    <fullName>2C2</fullName>
                    <label>2C2-LOANS TO OTHER BANKS IN FOREIGN COUNTRIES</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3-LOANS TO FINANCE AG PRODUCTION &amp; OTHER LOANS TO FARMERS</label>
                </value>
                <value>
                    <fullName>4A</fullName>
                    <label>4A-COMMERCIAL &amp; INDUSTRIAL LOANS TO US ADDRESSES</label>
                </value>
                <value>
                    <fullName>4B</fullName>
                    <label>4B-COMMERCIAL &amp; INDUSTRIAL LOANS TO NON-US ADDRESSES</label>
                </value>
                <value>
                    <fullName>6A</fullName>
                    <label>6A- INDIVIDUALS-CREDIT CARDS</label>
                </value>
                <value>
                    <fullName>6B</fullName>
                    <label>6B-INDIVIDUALS-OTHER REVOLVING PLANS</label>
                </value>
                <value>
                    <fullName>6C</fullName>
                    <label>6C-AUTOMOBILE LOANS</label>
                </value>
                <value>
                    <fullName>6D</fullName>
                    <label>6D-OTHER CONSUMER LOANS</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7-LOANS TO FOREIGN GOVERNMENTS &amp; OFFICIAL INSTITUTIONS</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>8-US STATE &amp; POLITICAL OBLIGATIONS</label>
                </value>
                <value>
                    <fullName>9A</fullName>
                    <label>9A-ALL LOANS TO NON-DEPOSITORY INSTITUTIONS</label>
                </value>
                <value>
                    <fullName>9B1</fullName>
                    <label>9B1-ALL OTHER LOANS TO PURCHASE/CARRY SECURITIES</label>
                </value>
                <value>
                    <fullName>9B2</fullName>
                    <label>9B2-ALL OTHER LOANS FOR INVESTMENT, NON-PROFITS, OVERDRAFT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__CoreBookingDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Core Booking Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JHJX__CoreProductCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>jXchange Product Code (Core Loan Type)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__DrAcctExpDt__c</fullName>
        <description>Users populate this optional date field to define the debit account hold expiration date. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit Account Hold Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__DrAcctHldDt__c</fullName>
        <description>Users populate this optional date field to define the debit account hold date. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Debit Account Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__HldAcctId__c</fullName>
        <description>Users populate this optional number field with the hold account Deposit or CD number. By default, it is blank.</description>
        <label>Hold Account Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JHJX__HldAcctType__c</fullName>
        <description>Users populate this optional field with the hold account type. By default, it is blank.</description>
        <label>Hold Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__LOCCode__c</fullName>
        <description>The code that defines the type of line of credit.</description>
        <label>Line of Credit Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Revolving Line of Credit</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Straight Line of Credit</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Letter of Credit</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - Performance Letter of Credit</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - Financial Letter of Credit</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>6 - Commercial Letter of Credit</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>7 - Commitment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__LOCGdnceBorwAck__c</fullName>
        <description>Answers the question: Has the line of credit borrower acknowledge the guidance?</description>
        <label>Line of Credit Borrower Ack Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>true</fullName>
                    <label>True</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__LOCGdnceRedType__c</fullName>
        <description>Answers the question: What balance is used for the reduction to the line of credit level balance?</description>
        <label>Line of Credit Reduction Level Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AvlBal</fullName>
                    <label>Available Balance</label>
                </value>
                <value>
                    <fullName>LOCAmt</fullName>
                    <label>Line of Credit Amount</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__LOCGdnceType__c</fullName>
        <description>Answers the question: Does the line of credit subject to guidance?</description>
        <label>Line of Credit Guidance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>true</fullName>
                    <label>True</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__LOCPrtcpCode__c</fullName>
        <description>The code that defines the line of credits participation activity.</description>
        <label>Line of Credit Participation Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                    <label>Participated</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Sold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__OriginationDate__c</fullName>
        <description>This field is required. This is the Original Loan Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__SalesPerson__c</fullName>
        <description>The Users populate this optional picklist field that represents the sales person. By default, it is blank.</description>
        <label>Sales Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JHJX__SalesPerson</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__LP_User_Defined_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LP User Defined 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__LP_User_Defined_2__c</fullName>
        <description>LP User Defined</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LP User Defined 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__LP_User_Defined_3__c</fullName>
        <description>LP User Defined</description>
        <encryptionScheme>None</encryptionScheme>
        <label>LP User Defined 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__APR__c</fullName>
        <description>This percent field is optional and is populated once an offer is selected during the Retail Loan Workflow. It populates with the Annual Percentage Rate.</description>
        <label>APR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Officer__c</fullName>
        <description>This field is optional. It is manually populated. The Account Officer field is typically used to identify the employee responsible for servicing the account (if different from the Loan Officer).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Officer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required. It is automatically populated during loan creation. This field is a lookup to a relationship/account that the loan is associated to and denotes the primary borrower for the loan.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Accrued_Interest__c</fullName>
        <description>This field is optional. It is manually populated. This currency field is used to specify the current amount of interest accrued on the loan.</description>
        <label>Accrued Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Adverse_Action_Flag__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated when an adverse action is approved. This field is used to flag an adverse action workflow. Using a 1 updates this field&apos;s stage to complete and status to declined.  Using a 0 indicates it requires approval.</description>
        <inlineHelpText>If AAF = 1, then the stage is changed to decline by Credit. If AAF = 0, then it is changed by non-credit and requires approval.</inlineHelpText>
        <label>Adverse Action Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allocated_Facility_Amount__c</fullName>
        <description>This optional field is automatically populated. This field sums the amounts from each of the participation records related to the loan.</description>
        <label>Allocated Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortized_Term_Months__c</fullName>
        <description>This field is optional, but is required for Pricing and Rate Structure. It is manually populated. This field is used to specify the length of time (in months) over which the principal amount of the loan will be paid.</description>
        <label>Amortized Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amortized_Term__c</fullName>
        <description>Deprecated field, no longer in use</description>
        <label>Amortized Term (Months) - D</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__AmountOutstanding__c</fullName>
        <description>The user populates this text field to record the borrower’s outstanding loan balance. By default, this field is blank.</description>
        <inlineHelpText>Enter the borrower’s total outstanding loan balance.</inlineHelpText>
        <label>Amount Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Available__c</fullName>
        <description>This field is automatically populated via a formula. It is used to either reference or calculate the availability for a given level in the multi-level facility (for example, Main, Limit, Sublimit, or Takedown).</description>
        <formula>IF(ISBLANK(LLC_BI__Availability_From_Core__c), LLC_BI__Amount__c - LLC_BI__AmountOutstanding__c, LLC_BI__Availability_From_Core__c)</formula>
        <label>Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_New_Money__c</fullName>
        <description>The field specifies the loan&apos;s dollar amount of new money. It is optional and manually populated.</description>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Unused__c</fullName>
        <description>This field is optional and specifies the amount of a multi-tiered loan commitment that remains unused over a specified period of time (for example, trailing 12 months) or to represent a similar reference. The user can manually populate it or it can be auto-populated via mapping from the financial institution&apos;s core.</description>
        <label>Amount Unused</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount__c</fullName>
        <description>This field is required. It is manually populated. It contains the full original amount of the Loan; this is the amount of the Loan at the time it was booked. This value should not change over time and is consistent over installment and line of credit products. This is used to calculate exposure for Line of Credit Products.</description>
        <inlineHelpText>This field is the &quot;Original Amount&quot; of the loan at the time of underwriting. This is different than the &quot;Principal Balance&quot; of the loan, which is the balance of the loan today.</inlineHelpText>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rate_Increase__c</fullName>
        <description>The system automatically populates this optional field using values from the Product Feature with how much the interest rate increases annually. The Annual Rate Increase is added to the Teaser Rate.</description>
        <inlineHelpText>This system-populated field displays how much the interest rate increases annually.</inlineHelpText>
        <label>Annual Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is automatically populated. This lookup field is used to specify the application record that is associated to the loan and is used as part of the SBA process and Customer Portal.</description>
        <label>Application</label>
        <referenceTo>LLC_BI__Application__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_Loan_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this currency field to determine the maximum amount approved for the loan. By default, this field is blank.</description>
        <inlineHelpText>This field displays the maximum amount approved for a loan.</inlineHelpText>
        <label>Approved For Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Attorney__c</fullName>
        <description>This field is optional. It is manually populated. This text field is used to specify the attorney associated with loan closing.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attorney</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorization_Date__c</fullName>
        <description>This field is optional. It can be used to specify the date an SBA Authorization is received.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Decision_Status__c</fullName>
        <description>This field is automatically updated via the auto decision process. It stores the result of the auto decision process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto-Decision Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Pay_Account__c</fullName>
        <description>This field is manually set. This is a text field used to specify the relationship/account being used to auto-pay the loan. Only used for reporting purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto Pay Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually set. It is a boolean field. When enabled, it flags that the loan is set up to use an auto-pay system. When disabled, it flags that the loan is not set up to use an auto-pay system. This field is only used for reporting purposes.</description>
        <label>Auto Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Availability_From_Core__c</fullName>
        <description>This field is optional and specifies the amount that remains available for advances. The user can manually populate it or it can be populated via mapping from the financial institution&apos;s core. nCino recommends that this field be populated from the core in order to display the correct availability for non-revolving loans.</description>
        <label>Availability from Core</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Payment__c</fullName>
        <description>This field is manually set. It is optional, but should be populated if LLC_BI__Balloon__c is set. This field is used to specify the total amount for the balloon payment.</description>
        <inlineHelpText>The total amount for the balloon payment</inlineHelpText>
        <label>Balloon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Product_Structure__c</fullName>
        <description>Administrators manually select Ballon Amount or Balloon Term from this picklist, which populates dependently on the Balloon__c field. Balloon Amount and Balloon Term determine how the Balloon calculation is performed, whether based on the total amount of the loan or the total duration of the loan.</description>
        <label>Balloon Product Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balloon Amount</fullName>
                </value>
                <value>
                    <fullName>Balloon Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional boolean field to indicate whether the product is a balloon product when the loan term is less than the amortization term.</description>
        <inlineHelpText>Balloon loan indicator.</inlineHelpText>
        <label>Balloon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Address__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the city of the billing address for a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_State__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the state of the billing address for a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Street__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the street address of the billing address for a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Billing_Zipcode__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the ZIP code of the billing address for a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_DateTime__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</inlineHelpText>
        <label>Booked Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Date__c</fullName>
        <description>This field is automatically populated. This field is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Booked Date is a calculated date that represents when the Loan is considered &apos;Booked&apos; as defined by the Product State Configuration. This date should not be edited.</inlineHelpText>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_City__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the city in the address of the loan&apos;s primary borrower.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Borrower City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_GL_Balance__c</fullName>
        <description>This field is optional. It is manually set. This currency field is used to specify the current borrower balance as shown on the institution&apos;s General Ledger. This field is used for reporting purposes only.</description>
        <inlineHelpText>Borrower&apos;s General Ledger Balance. Typically equals Principal Balance of the Loan. Exceptions are non-accrual, and charge-offs.</inlineHelpText>
        <label>Borrower GL Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_State__c</fullName>
        <description>This field is optional. It is manually set. This field is used to specify the state in the address of the loan&apos;s primary borrower.</description>
        <label>Borrower State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is manually set. This field is lookup to the branch object, and is used to specify the branch of the financial institution where the loan is held.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Broker_Fee__c</fullName>
        <description>This field is optional. It is manually set. This field holds the referral fee if the Loan was referred through a referral source, broker, or other intermediary.</description>
        <label>Referral Fee</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It is automatically set when a budget is selected for the loan. It is used for Construction Loan Administration loans.</description>
        <label>Budget</label>
        <referenceTo>LLC_BI__Budget__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Action_Taken__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates the action taken on the loan.</description>
        <inlineHelpText>CRA Action Taken for Loan</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Loan Originated</fullName>
                </value>
                <value>
                    <fullName>2 - Loan Purchased By Your Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__CRA_Affiliate__c</fullName>
        <description>This field is optional. It is manually populated. This field indicates if the action was taken at the institution or an affiliate.</description>
        <inlineHelpText>CRA Affiliate</inlineHelpText>
        <label>Affiliate Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Action taken at this institution</fullName>
                </value>
                <value>
                    <fullName>2 - Action taken at an affiliate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>